Added a working modal

--- a/ClientsAndProviders.Web/src/styles.css
+++ b/ClientsAndProviders.Web/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.mat-dialog-container {
+  //position: fixed !important;
+  top: 100px;
+  left: 20%;
+}
+
