--- a/ClientsAndProviders.Web/src/app/providers/new-provider-form/new-provider-form.component.html
+++ b/ClientsAndProviders.Web/src/app/providers/new-provider-form/new-provider-form.component.html
@@ -1,3 +1,79 @@
-<p>
-  new-provider-form works!
-</p>
+
+
+<mat-dialog-content>
+  <form >
+    <h2>Add New Provider</h2>
+    <table class="table table-bordered table-striped table-hover">
+      <!--TODO: create form without a table-->
+      <tr>
+        <td align="right">&nbsp;FirstName</td>
+        <td><input type="text" name="FirstName" [(ngModel)]="newProvider.FirstName"></td>
+        <td align="right">&nbsp;LastName</td>
+        <td><input type="text" name="LastName" [(ngModel)]="newProvider.LastName"></td>
+      </tr>
+      <tr>
+        <td align="right">&nbsp;Address</td>
+        <td><input type="text" name="Address" [(ngModel)]="newProvider.Address"></td>
+        <td align="right">&nbsp;City</td>
+        <td><input type="text" name="City" [(ngModel)]="newProvider.City"></td>
+      </tr>
+      <tr>
+        <td align="right">&nbsp;ZipCode</td>
+        <td><input type="text" name="ZipCode" [(ngModel)]="newProvider.ZipCode"></td>
+        <td align="right">&nbsp;Active</td>
+        <td><input type="checkbox" name="Active" [(ngModel)]="newProvider.Active"></td>
+      </tr>
+      <tr>
+        <td align="right">&nbsp;Gender</td>
+        <td><input type="text" name="Gender" [(ngModel)]="newProvider.Gender"></td>
+        <td align="right">&nbsp;HireDate</td>
+        <td><input type="text" name="HireDate" [(ngModel)]="newProvider.HireDate"></td>
+      </tr>
+      <tr>
+        <td align="right">&nbsp;EmailAddress</td>
+        <td><input type="text" name="EmailAddr" [(ngModel)]="newProvider.EmailAddr"></td>
+        <td align="right">&nbsp;Notes</td>
+        <td><input type="text" name="Notes" [(ngModel)]="newProvider.notes">
+      </tr>
+      <tr>
+        <td align="right">&nbsp;CreateDate</td>
+        <td><input type="text" name="CreateDate" [(ngModel)]="newProvider.CreateDate"></td>
+        <td align="right">&nbsp;CreatedBy</td>
+        <td><input type="text" name="CreatedBy" [(ngModel)]="newProvider.CreatedBy"></td>
+      </tr>
+      <tr>
+        <td align="right">&nbsp;LastModifiedDate</td>
+        <td><input type="text" name="LastModifiedDate" [(ngModel)]="newProvider.LastModifiedDate"></td>
+        <td align="right">&nbsp;LastModifiedBy</td>
+        <td><input type="text" name="LastModifiedBy" [(ngModel)]="newProvider.LastModifiedBy"></td>
+      </tr>
+      <tr>
+        <td colspan=4>
+          <hr />
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <app-provider-svc-code></app-provider-svc-code>
+            </div>
+            <div class="form-group col-md-6">
+              <app-provider-available-shifts></app-provider-available-shifts>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="4" style="text-align: center">
+          <button type="button" class="btn btn-warning" (click)="cancelNewProvider()">Cancel</button>&nbsp;&nbsp;
+          <button type="button" class="btn btn-primary" (click)="saveProvider(newProvider)">Save New Provider</button>
+        </td>
+      </tr>
+    </table>
+  </form>
+</mat-dialog-content>
+
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>
+    Close
+  </button>
+</mat-dialog-actions>
+
+
