--- a/ClientsAndProviders.Web/src/app/nav/nav.component.html
+++ b/ClientsAndProviders.Web/src/app/nav/nav.component.html
@@ -11,10 +11,9 @@
             Providers
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">All Providers</a>
             <a class="dropdown-item" href="#">Assigned Providers</a>
             <a class="dropdown-item" href="#">Unassigned Providers</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">All Providers</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -22,10 +21,9 @@
               Clients
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Clients that have been Assigned</a>
-              <a class="dropdown-item" href="#">Unassigned Clients</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">All Clients</a>
+              <a class="dropdown-item" href="#">Clients needing Assignment</a>
+              <a class="dropdown-item" href="#">Assigned Clients</a>
             </div>
           </li>
           <li class="nav-item dropdown">
