--- a/ClientsAndProviders.Web/src/app/providers/providers.component.html
+++ b/ClientsAndProviders.Web/src/app/providers/providers.component.html
@@ -48,75 +48,83 @@
     </button>
     <br>
     <br>
-
-
+    
     <!--TODO: put this form in a component line add new provider-->    
-    <form *ngIf="editProviderForm">
+    <div *ngIf="editProviderForm">
       <h2>ProviderId:( {{ viewEditProvider.providerId }} )</h2>
-      <fieldset [disabled]='true'>
-        <div class="form-group">
-          <label>First Name</label>
-          <input type="text" class="form-control" name="firstName" [(ngModel)]="viewEditProvider.firstName" />
-        </div>
-        <div class="form-group">
-          <label>Last Name</label>
-          <input type="text" class="form-control" name="lastName" [(ngModel)]="viewEditProvider.lastName" />
-        </div>
-        <div class="form-group">
-          <label>Address</label>
-          <input type="text" class="form-control" name="address" [(ngModel)]="viewEditProvider.address" />
-        </div>
-        <div class="form-group">
-          <label>City</label>
-          <input type="text" class="form-control" name="city" [(ngModel)]="viewEditProvider.city" />
-        </div>
-        <div class="form-group">
-          <label>ZipCode</label>
-          <input type="text" class="form-control" name="zipCode" [(ngModel)]="viewEditProvider.zipCode" />
-        </div>
-        <div class="form-group">
-          <label>Active</label>
-          <input type="checkbox" class="form-control" name="active" [(ngModel)]="viewEditProvider.active" />
-        </div>
-        <div class="form-group">
-          <label>Gender</label>
-          <input type="text" class="form-control" name="gender" [(ngModel)]="viewEditProvider.gender" />
-        </div>
-        <div class="form-group">
-          <label>HireDate</label>
-          <input type="text" class="form-control" name="hireDate" [(ngModel)]="viewEditProvider.hireDate" />
-        </div>
-        <div class="form-group">
-          <label>Notes</label>
-          <input type="text" class="form-control" name="notes" [(ngModel)]="viewEditProvider.notes" />
-        </div>
-        <div class="form-group">
-          <label>CreateDate</label>
-          <input type="text" class="form-control" name="createDate" [(ngModel)]="viewEditProvider.createDate" />
-        </div>
-        <div class="form-group">
-          <label>LastModifiedDate</label>
-          <input type="text" class="form-control" name="lastModifiedDate" [(ngModel)]="viewEditProvider.lastModifiedDate" />
-        </div>
-        <div class="form-group">
-          <label><b>SvcCodes</b></label>
-          <div *ngFor="let svcCd of viewEditProvider.providerSvcCodes">
-            <input type="text" class="form-control" name="{{ svcCd.svcCode }}" [(ngModel)]="svcCd.svcCode" />
+      <fieldset [disabled]="isDisabled">
+        <div class="form-row">
+          <div class="form-group col-md-2">
+            <label>First Name</label>
+            <input type="text" class="form-control" name="firstName" [(ngModel)]="viewEditProvider.firstName" />
+          </div>
+          <div class="form-group col-md-2">
+            <label>Last Name</label>
+            <input type="text" class="form-control" name="lastName" [(ngModel)]="viewEditProvider.lastName" />
+          </div>
+          <div class="form-group col-md-3">
+            <label>Address</label>
+            <input type="text" class="form-control" name="address" [(ngModel)]="viewEditProvider.address" />
+          </div>
+          <div class="form-group col-md-2">
+            <label>City</label>
+            <input type="text" class="form-control" name="city" [(ngModel)]="viewEditProvider.city" />
+          </div>
+          <div class="form-group col-md-2">
+            <label>ZipCode</label>
+            <input type="text" class="form-control" name="zipCode" [(ngModel)]="viewEditProvider.zipCode" />
           </div>
         </div>
-        <div class="form-group">
-          <label><b>Available Shifts</b></label><br />
-          <label class="col-3">Weekday</label><label class="col-3">Shift</label><label class="col-3">HasBeenScheduled?</label>
-          <div *ngFor="let availShift of viewEditProvider.providerAvailableShifts">
-            <input type="text" class="form-control-sm" name="{{ availShift.dayOfWeek }}" [(ngModel)]="availShift.dayOfWeek" />
-            <input type="text" class="form-control-sm" name="{{ availShift.shift }}" [(ngModel)]="availShift.shift" />
-            <input type="checkbox" class="form-control-sm" name="{{ availShift.hasBeenScheduled }}" [(ngModel)]="availShift.hasBeenScheduled" />
+        <div class="form-row">
+          <div class="form-group col-md-1">
+            <label>Active</label>
+            <input type="checkbox" class="form-control" name="active" [(ngModel)]="viewEditProvider.active" />
+          </div>
+          <div class="form-group col-md-1">
+            <label>Gender</label>
+            <input type="text" class="form-control" name="gender" [(ngModel)]="viewEditProvider.gender" />
+          </div>
+          <div class="form-group col-md-2">
+            <label>HireDate</label>
+            <input type="text" class="form-control" name="hireDate" [(ngModel)]="viewEditProvider.hireDate" />
+          </div>
+          <div class="form-group col-md-8">
+            <label>Notes</label>
+            <input type="text" class="form-control" name="notes" [(ngModel)]="viewEditProvider.notes" />
           </div>
         </div>
+        <div class="form-row">
+          <div class="form-group">
+            <p>** provider created on <strong>{{ viewEditProvider.createDate | date:'MM-dd-yyyy HH:mm a' }}</strong> and last updated on <strong>{{ viewEditProvider.lastModifiedDate| date:'MM-dd-yyyy HH:mm a' }}</strong> **</p>            
+          </div>
+        </div>
+        <div class-="form-row"><hr /></div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label><b>SvcCodes</b></label>
+            <div *ngFor="let svcCd of viewEditProvider.providerSvcCodes">
+              <input type="text" class="form-control-sm" name="{{ svcCd.svcCode }}" [(ngModel)]="svcCd.svcCode" />
+            </div>
+          </div>
+          <div class="form-group col-md-6">
+            <label><b>Available Shifts</b></label><br />            
+            <div class="form-row">
+              <div class="col-4" *ngFor="let availShift of viewEditProvider.providerAvailableShifts">
+                <input type="text" class="form-control-sm" name="{{ availShift.dayOfWeek }}" [(ngModel)]="availShift.dayOfWeek" />
+                <input type="text" class="form-control-sm" name="{{ availShift.shift }}" [(ngModel)]="availShift.shift" />
+                <input type="checkbox" class="form-control-sm" name="{{ availShift.hasBeenScheduled }}" [(ngModel)]="availShift.hasBeenScheduled" />Scheduled
+              </div>
+            </div>
+          </div>
+          </div>
       </fieldset>
-      <div style="text-align:center">
+      <div style="text-align:center" *ngIf="isDisabled">
+        <button type="button" class="btn btn-warning" (click)="cancelViewEditForm()">Cancel</button> &nbsp;&nbsp;
+        <button type="button" class="btn btn-primary" (click)="changeToEditable()">Edit Provider</button>
+      </div>
+      <div style="text-align:center" *ngIf="!isDisabled">
         <button type="button" class="btn btn-warning">Cancel</button> &nbsp;&nbsp;
-        <button type="button" class="btn btn-primary">Edit Provider</button>
+        <button type="button" class="btn btn-primary">Save Changes</button>
       </div>
 
 
@@ -198,7 +206,7 @@
       </table>
     </div>
   </div>-->
-    </form>    
+    </div>    
     
   </div>
 </div>
