--- a/ClientsAndProviders.Web/src/app/providers/providers.component.html
+++ b/ClientsAndProviders.Web/src/app/providers/providers.component.html
@@ -100,21 +100,57 @@
         </div>
         <div class-="form-row"><hr /></div>
         <div class="form-row">
-          <div class="form-group col-md-6">
-            <label><b>SvcCodes</b></label>
+          <div class="form-group col-md-3">
+            <label><strong>SvcCodes</strong></label>
             <div *ngFor="let svcCd of viewEditProvider.providerSvcCodes">
               <input type="text" class="form-control-sm" name="{{ svcCd.svcCode }}" [(ngModel)]="svcCd.svcCode" />
             </div>
           </div>
-          <div class="form-group col-md-6">
-            <label><b>Available Shifts</b></label><br />            
-            <div class="form-row">
-              <div class="col-4" *ngFor="let availShift of viewEditProvider.providerAvailableShifts">
-                <input type="text" class="form-control-sm" name="{{ availShift.dayOfWeek }}" [(ngModel)]="availShift.dayOfWeek" />
-                <input type="text" class="form-control-sm" name="{{ availShift.shift }}" [(ngModel)]="availShift.shift" />
-                <input type="checkbox" class="form-control-sm" name="{{ availShift.hasBeenScheduled }}" [(ngModel)]="availShift.hasBeenScheduled" />Scheduled
-              </div>
-            </div>
+          <div class="form-group col-md-9">
+            <label><strong>Available Shifts</strong></label>
+            <table class="table table-striped table-bordered">
+              <tr>
+                <th>DayOfWeek</th>
+                <th>Shift</th>
+                <th>Scheduled?</th>
+                <th>Actions</th>
+              </tr>
+              <tr *ngFor="let availShift of viewEditProvider.providerAvailableShifts">
+                <td>
+                  <input type="text" class="form-control-sm" name="{{ availShift.dayOfWeek }}" [(ngModel)]="availShift.dayOfWeek" />
+                </td>
+                <td>
+                  <input type="text" class="form-control-sm" name="{{ availShift.shift }}" [(ngModel)]="availShift.shift" />
+                </td>
+                <td align="center">
+                  <input type="checkbox" class="form-control-sm" name="{{ availShift.hasBeenScheduled }}" [(ngModel)]="availShift.hasBeenScheduled" />
+                </td>
+                <td>
+                  <button class="btn btn-info">
+                    <i class="fa fa-save"></i>
+                  </button>
+                  <button class="btn btn-danger">
+                    <i class="fa fa-trash"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr *ngIf="!isDisabled">
+                <td>
+                  <input type="text" class="form-control-sm" name="newShiftDayOfWeek" [(ngModel)]="newShift.dayOfWeek" />
+                </td>
+                <td>
+                  <input type="text" class="form-control-sm" name="newShiftShift" [(ngModel)]="newShift.shift" />
+                </td>
+                <td align="center">
+                  <input type="checkbox" class="form-control-sm" name="newShiftHasBeenScheduled" [(ngModel)]="newShift.hasBeenScheduled" />
+                </td>
+                <td>
+                  <button class="btn-success" (click)="addShift(newShift)">
+                    <i class="fa fa-plus"></i>
+                  </button>
+                </td>
+              </tr>
+            </table>
           </div>
           </div>
       </fieldset>
