added stuff for svcCodes and available shifts
added html for svccode and shifts components.. but it isn't working very well yet.

--- a/ClientsAndProviders.Web/src/app/providers/new-provider-form/new-provider-form.component.html
+++ b/ClientsAndProviders.Web/src/app/providers/new-provider-form/new-provider-form.component.html
@@ -1,7 +1,7 @@
 
 
 <mat-dialog-content>
-  <form >
+  <div> <!--removed form tag and replaced w/ div tag,  it was giving errors-->
     <h2>Add New Provider</h2>
     <table class="table table-bordered table-striped table-hover">
       <!--TODO: create form without a table-->
@@ -67,7 +67,7 @@
         </td>
       </tr>
     </table>
-  </form>
+  </div>
 </mat-dialog-content>
 
 <mat-dialog-actions>
