--- a/ClientsAndProviders.Web/src/styles.css
+++ b/ClientsAndProviders.Web/src/styles.css
@@ -4,4 +4,11 @@
   top: 100px;
   left: 20%;
 }
+.input-xs {
+  height: 22px;
+  padding: 2px 5px;
+  font-size: 12px;
+  line-height: 1.5; /* If Placeholder of the input is moved up, rem/modify this. */
+  border-radius: 3px;
+}
 
