--- a/ClientsAndProviders.Web/src/app/providers/providers.component.html
+++ b/ClientsAndProviders.Web/src/app/providers/providers.component.html
@@ -4,7 +4,21 @@
     <button class="btn btn-success" (click)="showAddProviderForm()">
       <i class="fa fa-plus"></i>&nbsp;Add New Provider
     </button>
-    <br />
+    <hr />
+    <div class="col-md-12" style="background-color: antiquewhite; border:groove">
+      FILTER PROVIDERS BY:
+      <br />Active: <input type="checkbox" (change)="filterBy('active', $event)" /> | NotActive: <input type="checkbox" (change)="filterBy('inactive', $event)" /> | Include Therapists: <input type="checkbox" (change)="filterBy('istherapist', $event)" checked />
+      <br />Last Name: <input id="lastNameFilterTextbox" type="text" class="form-control-sm" /> City: <input id="cityFilterTextbox" type="text" class="form-control-sm" />
+      <hr />
+      <div style="height:auto; display: block; text-align:center; background-color: antiquewhite">        
+          <button class="bn btn-light">
+            <i class="fa fa-recycle">Reset ALL Filter Results</i>
+          </button>
+          <button class="bn btn-info" (click)="filterBy('lastName')" >
+            <i class="fa fa-magic"> Filter Results</i>
+          </button>
+        </div>      
+    </div>
     <br />
     <table class="table table-bordered table-striped table-hover">
       <thead>
@@ -48,137 +62,137 @@
     </button>
     <br>
     <br>
-    
+
     <!--TODO: put this form in a component line add new provider-->    
-    <div *ngIf="editProviderForm">
-      <h2>ProviderId:( {{ viewEditProvider.providerId }} )</h2>
-      <fieldset [disabled]="isDisabled">
-        <div class="form-row">
-          <div class="form-group col-md-2">
-            <label>First Name</label>
-            <input type="text" class="form-control" name="firstName" [(ngModel)]="viewEditProvider.firstName" />
+      <div *ngIf="editProviderForm">
+        <h2>ProviderId:( {{ viewEditProvider.providerId }} )</h2>
+        <fieldset [disabled]="isDisabled">
+          <div class="form-row">
+            <div class="form-group col-md-2">
+              <label>First Name</label>
+              <input type="text" class="form-control" name="firstName" [(ngModel)]="viewEditProvider.firstName" />
+            </div>
+            <div class="form-group col-md-2">
+              <label>Last Name</label>
+              <input type="text" class="form-control" name="lastName" [(ngModel)]="viewEditProvider.lastName" />
+            </div>
+            <div class="form-group col-md-3">
+              <label>Address</label>
+              <input type="text" class="form-control" name="address" [(ngModel)]="viewEditProvider.address" />
+            </div>
+            <div class="form-group col-md-2">
+              <label>City</label>
+              <input type="text" class="form-control" name="city" [(ngModel)]="viewEditProvider.city" />
+            </div>
+            <div class="form-group col-md-2">
+              <label>ZipCode</label>
+              <input type="text" class="form-control" name="zipCode" [(ngModel)]="viewEditProvider.zipCode" />
+            </div>
           </div>
-          <div class="form-group col-md-2">
-            <label>Last Name</label>
-            <input type="text" class="form-control" name="lastName" [(ngModel)]="viewEditProvider.lastName" />
+          <div class="form-row">
+            <div class="form-group col-md-1">
+              <label>Active</label>
+              <input type="checkbox" class="form-control" name="active" [(ngModel)]="viewEditProvider.active" />
+            </div>
+            <div class="form-group col-md-1">
+              <label>Gender</label>
+              <input type="text" class="form-control" name="gender" [(ngModel)]="viewEditProvider.gender" />
+            </div>
+            <div class="form-group col-md-2">
+              <label>HireDate</label>
+              <input type="text" class="form-control" name="hireDate" [(ngModel)]="viewEditProvider.hireDate" />
+            </div>
+            <div class="form-group col-md-8">
+              <label>Notes</label>
+              <input type="text" class="form-control" name="notes" [(ngModel)]="viewEditProvider.notes" />
+            </div>
           </div>
-          <div class="form-group col-md-3">
-            <label>Address</label>
-            <input type="text" class="form-control" name="address" [(ngModel)]="viewEditProvider.address" />
+          <div class="form-row">
+            <div class="form-group">
+              <p>** provider created on <strong>{{ viewEditProvider.createDate | date:'MM-dd-yyyy HH:mm a' }}</strong> and last updated on <strong>{{ viewEditProvider.lastModifiedDate| date:'MM-dd-yyyy HH:mm a' }}</strong> **</p>
+            </div>
           </div>
-          <div class="form-group col-md-2">
-            <label>City</label>
-            <input type="text" class="form-control" name="city" [(ngModel)]="viewEditProvider.city" />
+          <div class-="form-row"><hr /></div>
+          <div class="form-row">
+            <div class="form-group col-md-3">
+              <label><strong>SvcCodes</strong></label>
+              <table>
+                <tr *ngFor="let svcCd of viewEditProvider.providerSvcCodes">
+                  <td><input type="text" class="form-control-sm" name="{{ svcCd.svcCode }}" [(ngModel)]="svcCd.svcCode" /></td>
+                  <td>
+                    <button class="btn btn-danger" (click)="removeSvcCode(svcCd.svcCode)">
+                      <i class="fa fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+                <tr *ngIf="!isDisabled">
+                  <td>
+                    <input type="text" class="form-control-sm" name="newSvcCodeValue" [(ngModel)]="newSvcCode.svcCode" />
+                  </td>
+                  <td>
+                    <button class="btn-success" (click)="addSvcCode(newSvcCode)">
+                      <i class="fa fa-plus"></i>
+                    </button>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="form-group col-md-9">
+              <label><strong>Available Shifts</strong></label>
+              <table class="table table-striped table-bordered">
+                <tr>
+                  <th>DayOfWeek</th>
+                  <th>Shift</th>
+                  <th>Scheduled?</th>
+                  <th>Actions</th>
+                </tr>
+                <tr *ngFor="let availShift of viewEditProvider.providerAvailableShifts">
+                  <td>
+                    <input type="text" class="form-control-sm" name="{{ availShift.dayOfWeek }}" [(ngModel)]="availShift.dayOfWeek" />
+                  </td>
+                  <td>
+                    <input type="text" class="form-control-sm" name="{{ availShift.shift }}" [(ngModel)]="availShift.shift" />
+                  </td>
+                  <td align="center">
+                    <input type="checkbox" class="form-control-sm" name="{{ availShift.hasBeenScheduled }}" [(ngModel)]="availShift.hasBeenScheduled" />
+                  </td>
+                  <td>
+                    <button class="btn btn-danger" (click)="removeShift(availShift)">
+                      <i class="fa fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+                <tr *ngIf="!isDisabled">
+                  <td>
+                    <input type="text" class="form-control-sm" name="newShiftDayOfWeek" [(ngModel)]="newShift.dayOfWeek" />
+                  </td>
+                  <td>
+                    <input type="text" class="form-control-sm" name="newShiftShift" [(ngModel)]="newShift.shift" />
+                  </td>
+                  <td align="center">
+                    <input type="checkbox" class="form-control-sm" name="newShiftHasBeenScheduled" [(ngModel)]="newShift.hasBeenScheduled" />
+                  </td>
+                  <td>
+                    <button class="btn-success" (click)="addShift(newShift)">
+                      <i class="fa fa-plus"></i>
+                    </button>
+                  </td>
+                </tr>
+              </table>
+            </div>
           </div>
-          <div class="form-group col-md-2">
-            <label>ZipCode</label>
-            <input type="text" class="form-control" name="zipCode" [(ngModel)]="viewEditProvider.zipCode" />
-          </div>
+        </fieldset>
+        <div style="text-align:center" *ngIf="isDisabled">
+          <button type="button" class="btn btn-warning" (click)="cancelViewEditForm()">Cancel</button> &nbsp;&nbsp;
+          <button type="button" class="btn btn-primary" (click)="changeToEditable()">Edit Provider</button>
         </div>
-        <div class="form-row">
-          <div class="form-group col-md-1">
-            <label>Active</label>
-            <input type="checkbox" class="form-control" name="active" [(ngModel)]="viewEditProvider.active" />
-          </div>
-          <div class="form-group col-md-1">
-            <label>Gender</label>
-            <input type="text" class="form-control" name="gender" [(ngModel)]="viewEditProvider.gender" />
-          </div>
-          <div class="form-group col-md-2">
-            <label>HireDate</label>
-            <input type="text" class="form-control" name="hireDate" [(ngModel)]="viewEditProvider.hireDate" />
-          </div>
-          <div class="form-group col-md-8">
-            <label>Notes</label>
-            <input type="text" class="form-control" name="notes" [(ngModel)]="viewEditProvider.notes" />
-          </div>
+        <div style="text-align:center" *ngIf="!isDisabled">
+          <button type="button" class="btn btn-warning">Cancel</button> &nbsp;&nbsp;
+          <button type="button" class="btn btn-primary" (click)="saveProvider(viewEditProvider)">Save Changes</button>
         </div>
-        <div class="form-row">
-          <div class="form-group">
-            <p>** provider created on <strong>{{ viewEditProvider.createDate | date:'MM-dd-yyyy HH:mm a' }}</strong> and last updated on <strong>{{ viewEditProvider.lastModifiedDate| date:'MM-dd-yyyy HH:mm a' }}</strong> **</p>            
-          </div>
-        </div>
-        <div class-="form-row"><hr /></div>
-        <div class="form-row">
-          <div class="form-group col-md-3">
-            <label><strong>SvcCodes</strong></label>
-            <table>
-              <tr *ngFor="let svcCd of viewEditProvider.providerSvcCodes">
-                <td><input type="text" class="form-control-sm" name="{{ svcCd.svcCode }}" [(ngModel)]="svcCd.svcCode" /></td>
-                <td>                  
-                  <button class="btn btn-danger" (click)="removeSvcCode(svcCd.svcCode)">
-                    <i class="fa fa-trash"></i>
-                  </button>
-                </td>
-              </tr>
-              <tr *ngIf="!isDisabled">
-                <td>                  
-                  <input type="text" class="form-control-sm" name="newSvcCodeValue" [(ngModel)]="newSvcCode.svcCode" />                  
-                </td>
-                <td>
-                  <button class="btn-success" (click)="addSvcCode(newSvcCode)">
-                    <i class="fa fa-plus"></i>
-                  </button>
-                </td>
-              </tr>
-            </table>            
-          </div>                
-          <div class="form-group col-md-9">
-            <label><strong>Available Shifts</strong></label>
-            <table class="table table-striped table-bordered">
-              <tr>                
-                <th>DayOfWeek</th>
-                <th>Shift</th>
-                <th>Scheduled?</th>
-                <th>Actions</th>
-              </tr>
-              <tr *ngFor="let availShift of viewEditProvider.providerAvailableShifts">                
-                <td>
-                  <input type="text" class="form-control-sm" name="{{ availShift.dayOfWeek }}" [(ngModel)]="availShift.dayOfWeek" />
-                </td>
-                <td>
-                  <input type="text" class="form-control-sm" name="{{ availShift.shift }}" [(ngModel)]="availShift.shift" />
-                </td>
-                <td align="center">
-                  <input type="checkbox" class="form-control-sm" name="{{ availShift.hasBeenScheduled }}" [(ngModel)]="availShift.hasBeenScheduled" />
-                </td>
-                <td>                  
-                  <button class="btn btn-danger" (click)="removeShift(availShift)">
-                    <i class="fa fa-trash"></i>
-                  </button>
-                </td>
-              </tr>
-              <tr *ngIf="!isDisabled">                
-                <td>
-                  <input type="text" class="form-control-sm" name="newShiftDayOfWeek" [(ngModel)]="newShift.dayOfWeek" />
-                </td>
-                <td>
-                  <input type="text" class="form-control-sm" name="newShiftShift" [(ngModel)]="newShift.shift" />
-                </td>
-                <td align="center">
-                  <input type="checkbox" class="form-control-sm" name="newShiftHasBeenScheduled" [(ngModel)]="newShift.hasBeenScheduled" />
-                </td>
-                <td>
-                  <button class="btn-success" (click)="addShift(newShift)">
-                    <i class="fa fa-plus"></i>
-                  </button>
-                </td>
-              </tr>
-            </table>
-          </div>
-          </div>
-      </fieldset>
-      <div style="text-align:center" *ngIf="isDisabled">
-        <button type="button" class="btn btn-warning" (click)="cancelViewEditForm()">Cancel</button> &nbsp;&nbsp;
-        <button type="button" class="btn btn-primary" (click)="changeToEditable()">Edit Provider</button>
-      </div>
-      <div style="text-align:center" *ngIf="!isDisabled">
-        <button type="button" class="btn btn-warning">Cancel</button> &nbsp;&nbsp;
-        <button type="button" class="btn btn-primary" (click)="saveProvider(viewEditProvider)">Save Changes</button>
-      </div>
+        
 
-
-      <!--<table class="table table-bordered table-striped table-hover">
+          <!--<table class="table table-bordered table-striped table-hover">
     <tr>
       <td align="right">&nbsp;FirstName</td>
       <td>{{ editedProvider.firstName }}</td>
@@ -256,8 +270,8 @@
       </table>
     </div>
   </div>-->
-    </div>    
-    
+</div>
+
   </div>
 </div>
 <app-modal></app-modal>
