--- a/ClientsAndProviders.Web/src/app/providers/providers.component.html
+++ b/ClientsAndProviders.Web/src/app/providers/providers.component.html
@@ -34,7 +34,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let provider of providersService.providerList">
+        <tr *ngFor="let provider of providersService.providerList | paginate: { itemsPerPage:10, currentPage: p }">
           <td>{{ provider.providerId }}</td>
           <td>{{ provider.firstName }}</td>
           <td>{{ provider.lastName }}</td>
@@ -56,6 +56,7 @@
         </tr>
       </tbody>
     </table>
+    <pagination-controls (pageChange)="p =$event"></pagination-controls>
 
     <button class="btn btn-success" (click)="showAddProviderForm()">
       <i class="fa fa-plus"></i>&nbsp;Add New Provider
