adding newclient modal form
making changes for new client modal form

--- a/ClientsAndProviders.Web/src/app/clients/clients.component.html
+++ b/ClientsAndProviders.Web/src/app/clients/clients.component.html
@@ -38,7 +38,7 @@
     </table>
     <pagination-controls (pageChange)="p =$event"></pagination-controls>
 
-    <button class="btn btn-success">
+    <button class="btn btn-success" (click)="showAddClientForm()">
       <i class="fa fa-plus"></i>&nbsp;Add New Client
     </button>
     <br>
